Add getDocument handler
